- remove internal OS Mesa support
- handle X11 events manually (with a callback
- remove software arg from `RGFW_window_initOpenGL`
- add `RGFW_window_opengl_isSoftware` for checking if software is supported
- add `RGFW_PRINTF` and `RGFW_SNPRINTF`
- fix usage of libc functions without RGFW_macro
- handle window resizing (wayland) 
- remove multi-threading functions 
- move keyboard map into private api as a global (helpful for a public API c89 and bindings)
- Added prefix to wayland functions

Release:    RGFW 1.7 (May 6, 2025)
-----------------------------------------------
This release focuses on improving bug fixes and supporting more edge-cases. It also continues to work towards feature parity with GLFW.
-----------------------------------------------

breaking changes:
- Rename `RGFW_window_checkFPS` to `RGFW_checkFPS`
- Change `RGFW_window_setShouldClose(RGFW_window)` to `RGFW_window_setShouldClose(RGFW_window, RGFW_BOOL)`
- Rename `RGFW_setMouseNotifyCallBack` → `RGFW_setMouseNotifyCallback`
- Rename `windowResizeCallback` → `windowResizedCallback`
- Rename `windowMoveCallback` → `windowMovedCallback`
- Change return type of `RGFW_getProcAddress` to `RGFW_proc`
- `event.inFocus` removed — use `RGFW_window_isInFocus()` instead

-----------------------------------------------

major changes:
- **Event Queue Rewrite**
  - Replace internal event passing system (WASM, WinAPI, macOS) with `RGFW_eventQueuePush` / `RGFW_eventQueuePop`
- **Platform-Independent Timing**
  - `RGFW_getTime` and `RGFW_getTimeNS` now platform-independent
  - Add `RGFW_setTime` (called with `0` at window init)
- **New OpenGL and Buffer Management**
  - Add `RGFW_window_swapBuffers_software` and `RGFW_window_swapBuffers_OpenGL`
  - Add `RGFW_window_initOpenGL` and `RGFW_window_freeOpenGL`
  - Add `RGFW_proc` typedef and update `RGFW_getProcAddress`
  - Default multisampling is now 0 (more consistent with GLFW)
- **Improved Software Rendering Support**